--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     // Navigation libraries
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'androidx.preference:preference-ktx:1.1.1'
@@ -68,6 +68,10 @@ dependencies {
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
+
+    // Firebase Core
+    implementation 'com.google.firebase:firebase-core:20.0.0'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
 
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
 
